10.may (ws)
      - fix #5742: 0.9.5 score crashes 0.9.6 RC1
7.may (ws)
      - another fix for midi import (#4989). Playback onset of last
        note was wrong.
      - fix #5683: No cautionary time signatures when changing between
        two different time signatures of the same note value
5.may (ws)
      - fix capella import: stave ordering for a part when saving
      - fix crash on import of some *.cap files
3.may (ws)
      - read plugins also from local data dir
        on linux: $HOME/.local/share/data/MusE/MuseScore/plugins
      - fix #5641, #5644: change pitch of tied notes
2.may (ws)
      - fix #5441: calling appendPart() in plugin causes crash
1.may  (la)
      - fix #5547: file association on mac + double click in finder
29.apr (db)
      - fix import of MIDI files with .midi file extension
25.apr (ws)
      - fix crash when reload in text edit mode when text palette is open
        (maybe fix for #5544)
21.apr (la)
      - fix #5531: Crash on windows when inserting a image from non system disk
18.apr (ws)
      - fix #5367: Change instrument changes transposition incorrectly
       (la)
      - fix #5309: Left arrow key during playback
      - fix #5249: Space after winged repeat bars (cheap fix)
16.apr (ws)
      - add foreground color to text style
      - fix #5398: Customized beam does not persist after save
15.apr (ws)
      - fix #5382: Crash with frames and two lines score
      - fix #5330: Frame crash multi-measure rest
14.apr (la)
      - fix #5373 : Drum notation not working
13.apr (la)
      - upgrade About box to the new style
      - update File menu icons
      - default score background color to white
12.apr (la)
      - fix #5303 MusicXML import/export of "none" text for <bar-style> element
      (db)
      - notation fixes to promenade demo for slurs and dot (by craig)
11.apr (ws)
      - fix #5196: First note entered is ignored if no duration selected
      - fix #5204: The offsets of tempo changes get calculated without