@@ -1,3 +1,5 @@
+13.may (ws)
+      - fix #5732: second note in measure missing accidental
 10.may (ws)
       - fix #5742: 0.9.5 score crashes 0.9.6 RC1
 7.may (ws)
